# chess

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  streamlit_app.py  test.py  todo.md
artifacts/policies/: vi_krk_greedy_intermediate_1.jsonl
artifacts/values/: vi_krk_greedy_intermediate_1.parquet  vi_krk_greedy_intermediate_10.parquet  vi_krk_greedy_intermediate_11.parquet  vi_krk_greedy_intermediate_12.parquet  vi_krk_greedy_intermediate_13.parquet  vi_krk_greedy_intermediate_14.parquet  vi_krk_greedy_intermediate_15.parquet  vi_krk_greedy_intermediate_16.parquet  vi_krk_greedy_intermediate_2.parquet  vi_krk_greedy_intermediate_3.parquet  vi_krk_greedy_intermediate_4.parquet  vi_krk_greedy_intermediate_5.parquet  vi_krk_greedy_intermediate_6.parquet  vi_krk_greedy_intermediate_7.parquet  vi_krk_greedy_intermediate_8.parquet  vi_krk_greedy_intermediate_9.parquet  vi_krk_values.parquet
binding/: env_binding.cpp
chess5x5/: CMakeLists.txt  README.md
chess5x5/doc/: implementation.md  theory.md
chess5x5/include/: bitboard.hpp  chessboard.hpp  game.hpp  types.hpp
chess5x5/src/: chessboard.cpp  game.cpp  move.cpp
chess5x5/test/: test_check.cpp  test_chessboard.cpp  test_game.cpp  test_move.cpp
doc/: Game Implementation.md  Intro to Chess Programming.md  Qlearning.md  demo.ipynb  implementation.md  man.ipynb  policy_gradient.md  project.md  theory.md
doc/notebook/: demo.ipynb  man.ipynb  mcts.ipynb
include/: bitboard.hpp  chessboard.hpp  environment.hpp  game.hpp  mcts.hpp  move.hpp  movegen.hpp  search.hpp  types.hpp
python/chessrl/: __init__.py  env.py
python/chessrl/algorithms/: mcts.py
python/chessrl/algorithms/Q_learning/: Q_learning.py  config.json  simulate.py  train.py
python/chessrl/algorithms/TD_Control/: TD_Control.py  config.json  simulate.py  train.py
python/chessrl/algorithms/actor_critic/: ac.py  ac_batch.py  config.json  debug.ipynb  policy.py  train.py  value.py
python/chessrl/algorithms/mcts/: mcts.cpp  mcts.py
python/chessrl/algorithms/policy_gradient/: config.json  debug.ipynb  policy.py  reinforce.py  simulate.py  train.py
python/chessrl/algorithms/value_iteration/: config.json  simulate.py  train.py  value_iteration.py
python/chessrl/algorithms/value_iteration/output/: value_iteration_policy.pkl
python/chessrl/eval/: adapters.py  analysis.ipynb  evaluator.py  helpers.py
python/chessrl/scripts/: mcts_selfplay.py  mcts_simulate.py
python/chessrl/utils/: create_endgames.py  endgame_loader.py  fen_parsing.py  helpers.py  io.py  load_config.py  mate_positions.py  move_idx.py
python/utils/: create_endgames.py  fen_parsing.py  load_config.py  opponent_move.py  plot_chess.py
slides/: main.tex  settings.sty
src/: bindings.cpp  chessboard.cpp  config.json  game.cpp  main.cpp  mcts.cpp  move.cpp  movegen.cpp  qlearning.py  search.cpp
src/policy_gradient/: config.json  debug.ipynb  reinforce.py  simulate.py  train.py
src/value_iteration/: config.json  simulate.py  train.py  value_iteration.py
src/value_iteration/output/: value_iteration_policy.pkl
syzygy-tables/: krk_endgame.py
tablebase/: data_info.md  kk.csv  preproc.ipynb
tablebase/kbbk/: kbbk_plus_kbk_test.csv  kbbk_plus_kbk_train.csv  kbbk_plus_kbk_val.csv
tablebase/kqk/: kqk_test.csv  kqk_val.csv
tablebase/krk/: krk_test.csv  krk_val.csv
test/: test.cpp  test_check.cpp  test_chessboard.cpp  test_game.cpp  test_move.cpp
utils/: create_endgames.py  endgame_loader.py  env_class.py  fen_parsing.py  opponent_move.py  plot_chess.py
